# narfi

./: README.md  litr-compose.yaml  litrbuild.sh  observability-compose.yaml
config/: otel-collector.yaml  tempo.yaml
config/datasources/: datasource.yaml
datasources/: datasource.yaml
notebooks/: cdp-cities-disclosing.ipynb
notebooks/.ipynb_checkpoints/: cdp-city-responses-checkpoint.ipynb
scripts/: ddl.sql  load_city_population.sql  queries.sql
services/litr/: example.db  prestart.sh  pyproject.toml
services/litr/alembic/: env.py
services/litr/alembic/versions/: d5485f73d618_modify_a_column.py  e628c9e0c8ea_create_user_table.py
services/litr/app/: __init__.py  backend_pre_start.py  deps.py  initial_data.py  logging.conf  logs.py  main.py  recipe_data.py
services/litr/app/crud/: base.py  crud_recipe.py  crud_user.py
services/litr/app/db/: init_db.py  session.py
services/litr/app/models/: recipe.py  user.py
services/litr/app/schemas/: recipe.py  user.py
services/litr/docker/: Dockerfile  docker-entrypoint.sh
